--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 install:
   - pip install coveralls coverage
   - pip install -q "$DJANGO"
+before_script:
+  - python setup.py install
 script:
   - coverage run manage.py test
 
