--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: python
 install:
+  - pip install flake8
   - pip install coveralls coverage
   - pip install -q "$DJANGO"
 before_script:
+  - flake8
   - python setup.py install
 script:
   - coverage run manage.py test
