--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ python:
 env:
   - DJANGO="Django>=1.8,<1.9"
   - DJANGO="Django>=1.9,<1.10"
+  - DJANGO="Django>=1.10,<1.11"
   - DJANGO='https://github.com/django/django/archive/master.tar.gz'
 
 matrix:
